# tracewright

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml  scorecard.yml  security.yml
bench/fixtures/: openai.redb
examples/: cached_candidate.py  echo_candidate.py
src/tracewright/: __init__.py  _budget.py  _models.py  _parse.py  _pydantic_ai.py  _pydantic_evals.py  _replay.py  _report.py  _score.py  cli.py
tests/: test_budget.py  test_extract_tool_calls.py  test_pydantic_ai_adapter.py  test_pydantic_equivalence.py  test_pydantic_evals_adapter.py  test_replay.py  test_report.py  test_tokens.py  test_tool_call_divergence.py
tests/fixtures/: enriched_trace.jsonl  pydantic_ai_spans.jsonl
