[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracewright"
version = "0.0.1"
description = "Replay-driven eval for f3dx and pydantic-ai traces. Take a JSONL trace, swap the model, get a per-case diff."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Federico Coccoli", email = "fed1@f3d1.dev" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pydantic>=2.10",
]

[project.optional-dependencies]
pydantic-ai = ["pydantic-ai>=1.87"]
dev = [
    "pytest>=8.0",
    "pydantic-ai>=1.87",
    "ruff>=0.7",
    "mypy>=1.10",
]

[project.scripts]
tracewright = "tracewright.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tracewright"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
strict = true
python_version = "3.10"
