[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracewright"
version = "0.0.7"
description = "Replay-driven eval for f3dx and pydantic-ai traces. Take a JSONL trace, swap the model, get a per-case diff."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Federico Benini", email = "smigolsmigol@protonmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pydantic>=2.10",
]

[project.optional-dependencies]
pydantic-ai = ["pydantic-ai>=1.87"]
pydantic-evals = ["pydantic-evals>=1.87"]
dev = [
    "pytest>=8.0",
    "pydantic-ai>=1.87",
    "ruff>=0.7",
    "mypy>=1.10",
]

[project.scripts]
tracewright = "tracewright.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tracewright"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
# inline CSS / HTML template strings naturally exceed line length
"src/tracewright/_report.py" = ["E501"]

[tool.mypy]
strict = true
python_version = "3.10"
